Fix wrong color for italicized links

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,7 +94,9 @@ svg {
 }
 
 @layer components {
-  .link-primary {
+  .link-primary,
+  .prose a,
+  .prose a em {
     @apply text-blue-600 dark:text-blue-500 underline decoration-blue-600 dark:decoration-blue-500 hover:text-blue-500 hover:decoration-blue-500 dark:hover:text-blue-400 dark:hover:decoration-blue-400;
   }
 
